[tool.poetry]
name = "monty-hall"
version = "0.1.0"
description = ""
authors = ["mrkeuz <mrkeuz@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.24.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
